creation de la page accueil et produit

--- a/front/html/index.html
+++ b/front/html/index.html
@@ -10,11 +10,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet" />
-
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
 
+    <!--    https://www.youtube.com/watch?v=5f1M_cu2eDM-->
+<!--    <link href="../manifest.json" rel="manifest"/>-->
+    <!--    <script>-->
+<!--      window.addEventListener('load', () => {-->
+<!--        if("serviceWorker" in navigator) {-->
+<!--          navigator.serviceWorker.register("../sw.js")-->
+<!--        }-->
+<!--      })-->
+<!--    </script>-->
+  </head>
   <body>
     <header>
       <div class="limitedWidthBlockContainer informations">
@@ -48,18 +55,18 @@
           <h1>Nos produits</h1>
           <h2>Une gamme d'articles exclusifs</h2>
         </div>
-        <section class="items" id="items"> 
-<!--           <a href="./product.html?id=42">
-            <article>
-              <img src=".../product01.jpg" alt="Lorem ipsum dolor sit amet, Kanap name1">
-              <h3 class="productName">Kanap name1</h3>
-              <p class="productDescription">Dis enim malesuada risus sapien gravida nulla nisl arcu. Dis enim malesuada risus sapien gravida nulla nisl arcu.</p>
-            </article>
-          </a> -->
+        <section class="items" id="items">
+<!--           <a href="./product.html?id=42">-->
+<!--            <article>-->
+<!--              <img src=".../product01.jpg" alt="Lorem ipsum dolor sit amet, Kanap name1">-->
+<!--              <h3 class="productName">Kanap name1</h3>-->
+<!--              <p class="productDescription">Dis enim malesuada risus sapien gravida nulla nisl arcu. Dis enim malesuada risus sapien gravida nulla nisl arcu.</p>-->
+<!--            </article>-->
+<!--          </a>-->
         </section>
       </div>
     </main>
-    
+
     <footer>
       <div class="limitedWidthBlockContainer footerMain">
         <div class="limitedWidthBlock">
@@ -83,6 +90,8 @@
         </div>
       </div>
     </footer>
-  <script src="../js/script.js"></script>
+  <script src="../js/index.js"></script>
   </body>
+
+
 </html>
