--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -48,16 +48,17 @@
       <h1>Votre panier</h1>
       <section class="cart">
         <section id="cart__items">
-<!--          P6 on rajoute : TEMPLATE pour créer un modele-->
+          <!--          P6 on rajoute : TEMPLATE pour créer un modele-->
           <template>
-            <article class="cart__item" data-id="{product-ID}" >
+            <article class="cart__item" data-id="{product-ID}" data-color="{product-color}">
               <div class="cart__item__img">
                 <img src="../images/product01.jpg" alt="Photographie d'un canapé">
               </div>
               <div class="cart__item__content">
                 <div class="cart__item__content__titlePrice">
                   <h2>Nom du produit</h2>
-                  <p>42,00 €</p>
+                  <p class="color">Vert</p>
+                  <p class="price">42,00 €</p>
                 </div>
                 <div class="cart__item__content__settings">
                   <div class="cart__item__content__settings__quantity">
@@ -78,7 +79,7 @@
           <p>Total (<span id="totalQuantity"><!-- 2 --></span> articles) : <span id="totalPrice"><!-- 84,00 --></span></p>
         </div>
         <div class="cart__order">
-          <form method="get" class="cart__order__form">
+          <form method="get" class="cart__order__form" novalidate>
             <div class="cart__order__form__question">
               <label for="firstName">Prénom: </label>
               <input type="text" name="firstName" id="firstName" required>
